# loan-default-prediction

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  batect.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot-automerge.yaml
notebooks/: credit-score-10-classification-algorithms-eda-original.ipynb  credit-score-10-classification-simplified.ipynb
scripts/: configure-pyenv.sh  curl-local-api.sh  go.sh  request-local-api-payload.json  request-local-api.sh  setup.sh  start-api-locally.sh  start-api-prod.sh  start-jupyter.sh  train-model.sh  unit-test.sh
scripts/go/: go-linux-ubuntu.sh  go-mac.sh  go-windows.bat  install-dependencies-on-host.sh
scripts/tests/: api-test.sh  model-metrics-test.sh  post-deployment-test.sh  smoke-test-model-training.sh
src/: train.py  training_helpers.py
src/api/: __init__.py  app.py
src/train/: train.py
src/training/: train.py  training_helpers.py
tests/: __init__.py  test_model_training.py
tests/api/: test_app.py
tests/model/: test_global_metrics.py
tests/model_training/: test_model_training.py
tests/post_deployment/: test_post_deployment.py
tests/training/: training_smoke_test.py
